mejora de diseño de pantalla clases

--- a/SIENI/SIENI-web/src/main/webapp/view/archivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/archivosMultimedia/index.xhtml
@@ -34,8 +34,8 @@
                 <f:selectItem itemValue ="2" itemLabel="Imagen"/>
             </p:selectOneMenu>
             <div class="EmptyBox20"></div>
-            <p:fileUpload id="archivo" label="Subir archivo" mode="simple" skinSimple="true" allowTypes="/(\.|\/)(mp3)$/" class="Container20 Responsive" />
-            <p:outputLabel for="archivo" value="XX--100--XX " class="Container10 Responsive"></p:outputLabel>
+            <p:fileUpload id="archivo" label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" >
+            </p:fileUpload>            
             <div class="EmptyBox20"></div>
             <p:commandButton value="Guardar"/>
             <p:commandButton value="Limpiar"/>
