--- a/SIENI/SIENI-web/src/main/webapp/view/clases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/clases/index.xhtml
@@ -36,7 +36,7 @@
                         <p:column headerText="Estado">
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar Programación de Clase"></i>
+                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar ProgramaciÃ³n de Clase"></i>
                             <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:column>
@@ -50,88 +50,136 @@
                     <p:dialog widgetVar="dlgAyuda2" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
-                    <div class="Container60 Responsive50" ><div class="ContainerIndent">
-                            <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda2').show();"></i>
-                            <div class="EmptyBox20"></div>
-                            <p:panelGrid columns="4">
-                                <p:outputLabel for="docente" value="Docente: " class="Contanier10 Responsive"></p:outputLabel>
-                                <p:selectOneMenu id="docente" value="#{crearClaseForm.docente}" class="Contanier10 Responsive" filter="true" filterMatchMode="startsWith">
-                                    <f:selectItems var="docente" value="#{crearClaseForm.docentes}" itemLabel="#{docente.description}" itemValue="#{docente.self}"></f:selectItems>
-                                </p:selectOneMenu>
-                                <p:outputLabel for="plantilla" value="Plantilla de clase: " class="Contanier10 Responsive"></p:outputLabel>
-                                <p:selectOneMenu id="plantilla" value="#{crearClaseForm.tipoClase}" class="Contanier10 Responsive">
-                                    <f:selectItems var="plantilla" value="#{crearClaseForm.tipoClases}" itemLabel="#{plantilla.description}" itemValue="#{plantilla.self}"></f:selectItems>
-                                </p:selectOneMenu>                                                
-                                <p:outputLabel for="estiloPasoPagina" value="Estilo de Paso de paginas"/>
-                                <p:selectOneMenu id="estiloPasoPagina" value="#{crearClaseForm.tipoClase}" class="Contanier10 Responsive">
-                                    <f:selectItems var="estiloPasoPagina" value="#{crearClaseForm.tipoClases}" itemLabel="#{estiloPasoPagina.description}" itemValue="#{estiloPasoPagina.self}"></f:selectItems>
-                                </p:selectOneMenu>
-                            </p:panelGrid>
-                            <p:tooltip for="docente" value="Docente que impartirá la clase" />
-                            <p:tooltip for="plantilla" value="Plantilla a utilizar para la creación de la Clase" />
-                            <p:tooltip for="estiloPasoPagina" value="Efecto cuando se pasan las paginas de la clase" />
 
-                            <div class="EmptyBox20"></div>
-                            <p:ribbon>
-                                <p:tab title="File">
-                                    <p:ribbonGroup label="Options">
-                                        <p:selectOneMenu id="ii" value="#{crearClaseForm.tipoClase}" class="Contanier10 Responsive">
-                                            <f:selectItems var="estiloPasoPagina" value="#{crearClaseForm.tipoClases}" itemLabel="#{estiloPasoPagina.description}" itemValue="#{estiloPasoPagina.self}"></f:selectItems>
-                                        </p:selectOneMenu>
-                                        <p:commandButton value="New" class="icon-list Fs25" type="button"/>
-                                        <p:commandButton value="Save" icon="ui-ribbonicon-save" styleClass="ui-ribbon-bigbutton" type="button"/>
-                                    </p:ribbonGroup>
-                                </p:tab>
-                            </p:ribbon>
-                            <p:panel header="Diseño de clase">
-                                <p:panel header="Descripción del Tema">
-                                    <p:tabView >
-                                        <p:tab title="pag 1" >
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda2').show();"></i>
+                    <div class="EmptyBox20"></div>
+                    <p:panelGrid columns="4">
+                        <p:outputLabel for="docente" value="Docente: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="docente" value="#{ClasesForm.docente}" class="Contanier10 Responsive" filter="true" filterMatchMode="startsWith">
+                            <f:selectItems var="docente" value="#{ClasesForm.docentes}" itemLabel="#{docente.description}" itemValue="#{docente.self}"></f:selectItems>
+                        </p:selectOneMenu>
+                        <p:outputLabel for="plantilla" value="Plantilla de clase: " class="Contanier10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="plantilla" value="#{ClasesForm.tipoClase}" class="Contanier10 Responsive">
+                            <f:selectItems var="plantilla" value="#{ClasesForm.tipoClases}" itemLabel="#{plantilla.description}" itemValue="#{plantilla.self}"></f:selectItems>
+                        </p:selectOneMenu>                                                
+                        <p:outputLabel for="estiloPasoPagina" value="Estilo de Paso de paginas"/>
+                        <p:selectOneMenu id="estiloPasoPagina" value="#{ClasesForm.estiloPasoPagina}" class="Contanier10 Responsive">
+                            <f:selectItems var="estiloPasoPagina" value="#{ClasesForm.estiloPasoPagina}" itemLabel="#{estiloPasoPagina.description}" itemValue="#{estiloPasoPagina.self}"></f:selectItems>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:tooltip for="docente" value="Docente que impartirá la clase" />
+                    <p:tooltip for="plantilla" value="Plantilla a utilizar para la creación de la Clase" />
+                    <p:tooltip for="estiloPasoPagina" value="Efecto cuando se pasan las paginas de la clase" />
 
-                                        </p:tab>
-                                        <p:tab title="pag 2" >
+                    <div class="EmptyBox20"></div>
+                    <!--                    <p:sticky target="r"/>-->
 
-                                        </p:tab>
-                                    </p:tabView>
-                                </p:panel>
-                                <p:editor id="editor" widgetVar="editorWidget" value="" height="200"/>
-                            </p:panel>
-                            <div class="EmptyBox20"></div>
-                            <p:commandButton value="Crear"></p:commandButton>
-                            <p:commandButton value="Limpiar"></p:commandButton>
-                            <p:commandButton value="Cancelar"></p:commandButton>
-                        </div>
-                    </div>
-                    <div class="Container40 Responsive50" ><div class="ContainerIndent">
-                            <p:tabView>
-                                <p:tab title ="Componentes">
-                                    <!--                                    <p:outputLabel value="Nombre"/>
-                                                                        <p:outputLabel value="Tipo"/>
-                                                                        <p:outputLabel value="Descripción"/>
-                                                                        <p:separator></p:separator>-->
+                    <p:panel id="r"  toggleable="true" header="Menu de Configuración">
+                        <p:ribbon>
+                            <p:tab title="Componentes de esta clase">
+                                <p:ribbonGroup label="Secciones de plantilla" class="Container25">
+                                    <p:orderList value="#{componentesClaseForm.seccionesPlantillas}" var="seccionPlantilla" itemValue="#{seccionPlantilla}"  controlsLocation="none">
+                                        <p:column>#{seccionPlantilla.description}</p:column>
+                                    </p:orderList>
+                                </p:ribbonGroup>
+                                <p:ribbonGroup label="Componentes" class="Container48">
+                                    <p:pickList value="#{componentesClaseForm.componentes}" var="componente" effect="bounce"
+                                                itemValue="#{componente}" itemLabel="#{componente.description}" showCheckbox="true"
+                                                showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains" addLabel="Agregar" addAllLabel="Agregar Todos" removeLabel="Remover" removeAllLabel="Remover Todos">
+                                        <f:facet name="sourceCaption">Disponibles</f:facet>
+                                        <f:facet name="targetCaption">Seleccionados</f:facet>
+                                        <p:column headerText="aaaaaaaa" >#{componente.description}</p:column>
+                                    </p:pickList>
+                                </p:ribbonGroup>
+                            </p:tab>
+                            <p:tab title="Configuración">
+                                <p:ribbonGroup label="Configuración de componente" class="Container20">
+                                    <p:outputLabel value="ancho"></p:outputLabel>
+                                    <p:spinner min="1" max="1080" value="#{configuracionClaseForm.ancho}"></p:spinner>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="alto"></p:outputLabel>
+                                    <p:spinner min="1" max="1920" value="#{configuracionClaseForm.alto}"></p:spinner>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="posicion X"></p:outputLabel>
+                                    <p:spinner min="1" max="1080" value="#{configuracionClaseForm.posicionX}"></p:spinner>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="posicion Y"></p:outputLabel>
+                                    <p:spinner min="1" max="1920" value="#{configuracionClaseForm.posicionY}"></p:spinner>
+                                </p:ribbonGroup>
+                            </p:tab>
 
-                                    <!--listado de componentes para configurar-->
-                                    <p:dataTable reflow="true">
-                                        <p:column headerText="Nombre"></p:column>
-                                        <p:column headerText="Tipo"></p:column>
-                                        <p:column headerText="Descripción"></p:column>
-                                    </p:dataTable>
-                                </p:tab>
-                                <p:tab title="Configuración"><!--imagenes-->
-                                    <p:outputLabel value="Tamaño"/>
-                                    <p:outputLabel value="Fuente"/>
-                                    <p:outputLabel value="Negrita"/></p:tab>
-                                <p:tab title="Interacción">
-                                    <p:dataTable reflow="true">
+                            <p:tab title="Interacción">
+                                <p:ribbonGroup label="Agregar Interacción" class="Container25">
+                                    <p:outputLabel value="Evento"></p:outputLabel>
+                                    <p:selectOneMenu value="#{InteraccionClaseForm.evento}" class="Contanier10 Responsive">
+                                        <f:selectItems var="evento" value="#{InteraccionClaseForm.eventos}" itemLabel="#{evento.description}" itemValue="#{evento.self}"></f:selectItems>
+                                    </p:selectOneMenu>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="Acción"></p:outputLabel>
+                                    <p:selectOneMenu value="#{InteraccionClaseForm.accion}" class="Contanier10 Responsive">
+                                        <f:selectItems var="accion" value="#{InteraccionClaseForm.acciones}" itemLabel="#{accion.description}" itemValue="#{accion.self}"></f:selectItems>
+                                    </p:selectOneMenu>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="Duración"></p:outputLabel>
+                                    <p:spinner min="1" max="1000" value="#{interaccionClaseForm.duracion}"></p:spinner>
+                                    <p:outputLabel value="Siguiente Componente"></p:outputLabel>
+                                    <p:selectOneMenu  value="#{InteraccionClaseForm.sigComponente}" class="Contanier10 Responsive">
+                                        <f:selectItems var="sigComponente" value="#{InteraccionClaseForm.sigsComponente}" itemLabel="#{sigComponente.description}" itemValue="#{sigComponente.self}"></f:selectItems>
+                                    </p:selectOneMenu>
+                                    <div class="EmptyBox10"></div>
+                                    <p:outputLabel value="Evento del siguiente Componente"></p:outputLabel>
+                                    <p:selectOneMenu  value="#{InteraccionClaseForm.eventoSigComponente}" class="Contanier10 Responsive">
+                                        <f:selectItems var="eventoSigComponente" value="#{InteraccionClaseForm.eventosSigComponente}" itemLabel="#{eventoSigComponente.description}" itemValue="#{eventoSigComponente.self}"></f:selectItems>
+                                    </p:selectOneMenu>
+                                    <p:outputLabel value="Tiempo de espera para activar siguiente componente"></p:outputLabel>
+                                    <p:spinner min="1" max="1000" value="#{interaccionClaseForm.tiEsperaActSigComp}"></p:spinner>
+                                    <p:commandButton value="Agregar Interacción"/>
+                                </p:ribbonGroup>
+                                <p:ribbonGroup label="Interacciones del componente" class="Container73">
+                                    <p:dataTable reflow="true" >
                                         <p:column headerText="Evento"></p:column>
                                         <p:column headerText="Acción"></p:column>
+                                        <p:column headerText="Duración"></p:column>
                                         <p:column headerText="Siguiente Componente"></p:column>
                                         <p:column headerText="Evento del siguiente Componente"></p:column>
                                         <p:column headerText="Tiempo de espera para activar siguiente componente"></p:column>
+                                        <p:column headerText="acciones"><p:commandButton value="Utilizar"/></p:column>
                                     </p:dataTable>
-                                </p:tab>                                
-                            </p:tabView>
-                        </div></div>
+                                </p:ribbonGroup>
+                            </p:tab>
+                        </p:ribbon>
+                    </p:panel>
+                    <p:panel header="Diseño de clase">
+                        <p:fieldset legend="Tema" toggleable="true">
+                            <p:tabView >
+                                <p:tab title="pag 1" >
+                                    <p:editor ></p:editor>
+                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                </p:tab>
+                                <p:tab title="+" >
+                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                </p:tab>
+                            </p:tabView>    
+                        </p:fieldset>
+                        <p:fieldset legend="Descripción del Tema"  toggleable="true">
+                            <p:tabView >
+                                <p:tab title="pag 1" >
+                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                </p:tab>
+                                <p:tab title="pag 2" >
+                                    <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Página"></i>
+                                </p:tab>
+                                <p:tab title="+" >
+
+                                </p:tab>
+                            </p:tabView>    
+                        </p:fieldset>
+                    </p:panel>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Vista Previa"></p:commandButton>
+                    <p:commandButton value="Crear"></p:commandButton>
+                    <p:commandButton value="Limpiar"></p:commandButton>
+                    <p:commandButton value="Cancelar"></p:commandButton>
                 </h:form>
             </p:tab>
         </p:tabView>
