mejora de diseño de pantallas y creacion de modelos de BD (5 entradas listas)

--- a/SIENI/SIENI-web/src/main/webapp/view/clases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/clases/index.xhtml
@@ -36,7 +36,7 @@
                         <p:column headerText="Estado">
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar ProgramaciÃ³n de Clase"></i>
+                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Consultar Programación de Clase"></i>
                             <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Clase"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:column>
