--- a/SIENI/SIENI-web/src/main/webapp/view/plantillaClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/plantillaClases/index.xhtml
@@ -8,8 +8,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
-            <p:menuitem value="Mantenimiento de clase" url="#"/>
-            <p:menuitem value="Formulario de registro de clases" url="/faces/view/aperturaAnioEscolar/index.xhtml"/>
+            <p:menuitem value="Mantenimiento de clase" url="#{siteUrls.gestionarAnioEscolar}"/>            
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -37,7 +36,7 @@
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-forbid-1 Fs25 Red" style="cursor: pointer" title="Consultar Clase"></i>
-                            <i class="icon-clock Fs25 Red" style="cursor: pointer" title="Modificar Plantilla de Clase"></i>
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Plantilla de Clase"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Plantilla de Clase"></i>
                         </p:column>
                     </p:dataTable>
