--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/programacionClase/index.xhtml
@@ -23,28 +23,27 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <p:remoteCommand  onstart="alert('Modificar')" update="clases" name="modificar"/>
                     <p:remoteCommand  onstart="alert('Eliminar')" update="clases" name="eliminar"/>
-                    <p:dataTable id="clases" var="car" value="" rows="10"
+                    <p:dataTable id="clases" rows="10" var="car" value="#{clasesForm.plantillas}" 
                                  paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true"
-                                 filteredValue=""
                                  >
-                        <p:column headerText="Docente" filterBy="" filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Docente" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Tipo" filterBy="" filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Tipo" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Curso" filterBy="" filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Curso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Tema" filterBy="" filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Tema" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Hora" filterBy="" filterMatchMode="contains">
+                        <p:column headerText="Hora" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Horario" filterBy="" filterMatchMode="contains">
+                        <p:column headerText="Horario" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Tipo Publicación" filterBy="" filterMatchMode="contains">
+                        <p:column headerText="Tipo Publicación" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
-                        <p:column headerText="Estado" filterBy="" filterMatchMode="contains" filterable="true">
+                        <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-forbid-1 Fs25 Red" style="cursor: pointer" title="Consultar Clase"></i>
