--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/index.xhtml
@@ -20,17 +20,21 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <p:dataTable value="">
-                        <p:column headerText="Año">
+                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
+                                 paginator="true"
+                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="5,10,15"
+                                 reflow="true">
+                        <p:column headerText="Año" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
 
                         </p:column>
-                        <p:column headerText="Fecha Inicio">
+                        <p:column headerText="Fecha Inicio" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
 
                         </p:column>
-                        <p:column headerText="Fecha Fin">
+                        <p:column headerText="Fecha Fin" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
 
                         </p:column>
-                        <p:column headerText="Estado">
+                        <p:column headerText="Estado" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
 
                         </p:column>
                         <p:column headerText="Acciones">
