--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/index.xhtml
@@ -20,12 +20,16 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <p:dataTable value="">
-                        <p:column headerText="Nombre"></p:column>
-                        <p:column headerText="Capacidad"></p:column>
-                        <p:column headerText="Docente"></p:column>
-                        <p:column headerText="Seccion"></p:column>
-                        <p:column headerText="Materia"></p:column>
+                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
+                                 paginator="true"
+                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                 rowsPerPageTemplate="5,10,15"
+                                 reflow="true">
+                        <p:column headerText="Nombre" filterBy="#{car.description}" filterable="true" filterMatchMode="contains"></p:column>
+                        <p:column headerText="Capacidad" filterBy="#{car.description}" filterable="true" filterMatchMode="contains"></p:column>
+                        <p:column headerText="Docente" filterBy="#{car.description}" filterable="true" filterMatchMode="contains"></p:column>
+                        <p:column headerText="Seccion" filterBy="#{car.description}" filterable="true" filterMatchMode="contains"></p:column>
+                        <p:column headerText="Materia" filterBy="#{car.description}" filterable="true" filterMatchMode="contains"></p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Curso"></i>
                             <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Curso"></i>
