modificacion de pantalla de gestion de evaluaciones

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/plantillaClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/plantillaClases/index.xhtml
@@ -80,6 +80,15 @@
                     <p:commandButton value="Crear"></p:commandButton>
                     <p:commandButton value="Limpiar"></p:commandButton>
                     <p:commandButton value="Cancelar"></p:commandButton>
+                    <div class="EmptyBox20"></div>
+                    <p:splitButton value="Otras Opciones" action="#">
+                        <p:menuitem value="Gestionar Secciones">    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Materias">    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Clases">
+                        </p:menuitem>
+                    </p:splitButton>
                 </h:form>
             </p:tab>
         </p:tabView>
